Apply assigned kms key secrets to token config